# lightyear

./: .gitignore  .pre-commit-config.yaml  .release.toml  CHANGELOG.md  Cargo.toml  FPS_DEMO_PLAN.md  NOTES.md  PROMPT.md  README.md  example_issues.md  justfile  rivet.yaml  todo.md
benches/: Cargo.toml  bitcode_packing.rs  message.rs  reflect.rs  replication.rs  replication_profiling.rs  spawn.rs
benches/bitcode_packing/: Cargo.toml
benches/compiletime/: Cargo.toml  run.sh
benches/criterion/: Cargo.toml  bench.sh  justfile
benches/divan/: Cargo.toml  bench.sh
benches/src/: client.rs  lib.rs  local_stepper.rs  profiler.rs  protocol.rs  server.rs  stepper.rs
client/: Cargo.toml
client/src/: client.rs  clients.rs  config.rs  connection.rs  events.rs  interpolation.rs  io.rs  lib.rs  ping_manager.rs  replication.rs  sync.rs  tick_manager.rs  time.rs
client/tests/: test_setup.rs  tick_manager.rs
examples/: CLEANUP_REVIEW.md  Cargo.toml  Dockerfile.server  README.md  bevy_headless.rs  bevy_simple.rs  bevy_step.rs  build_wasm.sh  connection_soak.rs  example_list.env  index.html  input_buffer_step.rs  prediction_step.rs
examples/auth/: Cargo.toml  README.md
examples/auth_new/: Cargo.toml
examples/avian_2d/: Cargo.toml  README.md
examples/avian_3d/: Cargo.toml  README.md  index.html
examples/avian_3d_character/: Cargo.toml  README.md
examples/avian_3d_character_new/: Cargo.toml  README.md
examples/avian_physics/: Cargo.toml  README.md  Trunk.toml
examples/avian_physics_new/: Cargo.toml  README.md
examples/bevy_enhanced_inputs/: Cargo.toml  README.md
examples/bullet_prespawn/: Cargo.toml  README.md  Trunk.toml  index.html
examples/certificates/: cert.pem  digest.txt  generate.sh  key.pem
examples/client_replication/: Cargo.toml  README.md  Trunk.toml  client.rs  main.rs  protocol.rs  server.rs  shared.rs
examples/client_replication_new/: Cargo.toml  README.md
examples/common/: Cargo.toml
examples/common_new/: Cargo.toml
examples/delta_compression/: Cargo.toml  README.md
examples/delta_compression_new/: Cargo.toml
examples/deterministic_replication/: Cargo.toml  README.md
examples/distributed_authority/: Cargo.toml  README.md
examples/distributed_authority_new/: Cargo.toml
examples/fps/: Cargo.toml  README.md
examples/fps_example/: Cargo.toml  README.md
examples/fps_new/: Cargo.toml
examples/interest_management/: Cargo.toml  README.md  Trunk.toml  client.rs  main.rs  protocol.rs  server.rs  shared.rs  wasm_command.sh
examples/interest_management_new/: Cargo.toml
examples/interest_management_wasm/: README.md  client.rs  main.rs  server.rs  shared.rs
examples/launcher/: Cargo.toml  README.md
examples/leafwing_inputs/: Cargo.toml  README.md  Trunk.toml  client.rs  main.rs  protocol.rs  server.rs  shared.rs
examples/leafwing_inputs_3d/: Cargo.toml  README.md
examples/lobby/: Cargo.toml  README.md
examples/lobby_new/: Cargo.toml  README.md
examples/multi_transport/: CL1  Cargo.toml  README.md
examples/network_visibility/: Cargo.toml  README.md
examples/priority/: Cargo.toml  README.md  Trunk.toml
examples/priority_new/: Cargo.toml  README.md
examples/projectiles/: Cargo.toml  README.md
examples/replication_groups/: Cargo.toml  README.md  Trunk.toml  client.rs  main.rs  protocol.rs  server.rs  shared.rs
examples/replication_groups_new/: Cargo.toml  README.md
examples/replicon/: Cargo.toml  README.md
examples/simple_box/: Cargo.toml  Cross.toml  Dockerfile  Dockerfile-amd64  Dockerfile-cross  Dockerfile-edgegap  README.md  Trunk.toml  client.rs  main.rs  protocol.rs  server.rs  shared.rs
examples/simple_box_new/: Cargo.toml
examples/simple_setup/: Cargo.toml  README.md
examples/simple_setup_new/: Cargo.toml  README.md
examples/spaceships/: Cargo.toml  README.md  index.html
examples/spaceships_new/: Cargo.toml
examples/src/: client.rs  lib.rs  protocol.rs  server.rs  stepper.rs
examples/stepper/: Cargo.toml
examples/tnua/: Cargo.toml  README.md
examples/xpbd_physics/: Cargo.toml
lightyear/: CHANGELOG.md  Cargo.toml
lightyear-connection/: Cargo.toml
lightyear-connection/src/: lib.rs
lightyear-frontend/: Cargo.toml
lightyear-io/: Cargo.toml
lightyear-io/src/: lib.rs
lightyear-packet/: Cargo.toml
lightyear-packet/src/: lib.rs
lightyear/src/: client.rs  lib.rs  protocol.rs  server.rs  shared.rs  web.rs
lightyear_aeronet/: CHANGELOG.md  Cargo.toml
lightyear_aeronet/src/: lib.rs  server.rs
lightyear_avian/: CHANGELOG.md  Cargo.toml
lightyear_avian/src/: avian3d.rs  correction_2d.rs  correction_3d.rs  lib.rs  plugin.rs  sync.rs  types_2d.rs  types_3d.rs
lightyear_avian2d/: CHANGELOG.md  Cargo.toml
lightyear_avian3d/: CHANGELOG.md  Cargo.toml  src
lightyear_client/: Cargo.toml
lightyear_client/src/: config.rs  connection.rs  lib.rs  networking.rs  plugin.rs  replication.rs  web.rs
lightyear_connection/: CHANGELOG.md  Cargo.toml
lightyear_connection/src/: client.rs  client_of.rs  direction.rs  host.rs  id.rs  identity.rs  lib.rs  network_target.rs  server.rs  shared.rs
lightyear_core/: CHANGELOG.md  Cargo.toml
lightyear_core/src/: confirmed_history.rs  history_buffer.rs  id.rs  interpolation.rs  lib.rs  network.rs  plugin.rs  prediction.rs  test.rs  tick.rs  time.rs  timeline.rs
lightyear_crossbeam/: CHANGELOG.md  Cargo.toml
lightyear_crossbeam/src/: lib.rs
lightyear_deterministic_replication/: Cargo.toml
lightyear_deterministic_replication/src/: archetypes.rs  lib.rs  (+5 more)
lightyear_frame_interpolation/: CHANGELOG.md  Cargo.toml
lightyear_inputs/: CHANGELOG.md  Cargo.toml
lightyear_inputs_bei/: CHANGELOG.md  Cargo.toml
lightyear_inputs_leafwing/: CHANGELOG.md  Cargo.toml
lightyear_inputs_native/: CHANGELOG.md  Cargo.toml
lightyear_interpolation/: CHANGELOG.md  Cargo.toml
lightyear_link/: CHANGELOG.md  Cargo.toml
lightyear_macros/: CHANGELOG.md  Cargo.toml
lightyear_messages/: CHANGELOG.md  Cargo.toml
lightyear_netcode/: CHANGELOG.md  Cargo.toml
lightyear_prediction/: CHANGELOG.md  Cargo.toml
lightyear_raw_connection/: Cargo.toml
(+1834 files in other folders)
