[workspace]
resolver = "3"
members = [
  "lightyear",
  "lightyear_aeronet",
  "lightyear_avian2d",
  "lightyear_avian3d",
  "lightyear_core",
  "lightyear_crossbeam",
  "lightyear_deterministic_replication",
  "lightyear_frame_interpolation",
  "lightyear_inputs",
  "lightyear_inputs_bei",
  "lightyear_inputs_leafwing",
  "lightyear_inputs_native",
  "lightyear_interpolation",
  "lightyear_link",
  "lightyear_metrics",
  "lightyear_transport",
  "lightyear_connection",
  "lightyear_messages",
  "lightyear_netcode",
  "lightyear_prediction",
  "lightyear_raw_connection",
  "lightyear_replication",
  "lightyear_replicon",
  "lightyear_serde",
  "lightyear_steam",
  "lightyear_sync",
  "lightyear_tests",
  "lightyear_udp",
  "lightyear_ui",
  "lightyear_utils",
  "lightyear_web",
  "lightyear_webtransport",
  "lightyear_websocket",
  # internal
  "benches/*",
  "demos/*",
  "examples/*",
]
default-members = ["lightyear"]
exclude = []


[workspace.package]
version = "0.26.2"
authors = ["Charles Bournhonesque <charlesbour@gmail.com>"]
publish = false
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# If your own code does CPU-intensive work, you might want to also enable some optimization for it.
# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Here is a configuration for the most aggressive optimizations possible
# Read this when trying to optimise WASM build: https://bevy-cheatbook.github.io/platforms/wasm/size-opt.html
[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false


[workspace.dependencies]
lightyear_aeronet = { path = "./lightyear_aeronet", version = "0.26.2", default-features = false }
lightyear_avian2d = { path = "./lightyear_avian2d", version = "0.26.2", default-features = false, features = [
  "2d",
] }
lightyear_avian3d = { path = "./lightyear_avian3d", version = "0.26.2", default-features = false, features = [
  "3d",
] }
lightyear_netcode = { path = "./lightyear_netcode", version = "0.26.2", default-features = false }
lightyear_connection = { path = "./lightyear_connection", version = "0.26.2", default-features = false }
lightyear_core = { path = "./lightyear_core", version = "0.26.2", default-features = false }
lightyear_crossbeam = { path = "./lightyear_crossbeam", version = "0.26.2", default-features = false }
lightyear_deterministic_replication = { path = "./lightyear_deterministic_replication", version = "0.26.2", default-features = false }
lightyear_frame_interpolation = { path = "./lightyear_frame_interpolation", version = "0.26.2", default-features = false }
lightyear_inputs = { path = "./lightyear_inputs", version = "0.26.2", default-features = false }
lightyear_inputs_bei = { path = "./lightyear_inputs_bei", version = "0.26.2", default-features = false }
lightyear_inputs_leafwing = { path = "./lightyear_inputs_leafwing", version = "0.26.2", default-features = false }
lightyear_inputs_native = { path = "./lightyear_inputs_native", version = "0.26.2", default-features = false }
lightyear_interpolation = { path = "./lightyear_interpolation", version = "0.26.2", default-features = false }
lightyear_messages = { path = "./lightyear_messages", version = "0.26.2", default-features = false }
lightyear_metrics = { path = "./lightyear_metrics", version = "0.26.2", default-features = false }
lightyear = { path = "lightyear", version = "0.26.2", default-features = false }
lightyear_transport = { path = "lightyear_transport", version = "0.26.2", default-features = false }
lightyear_prediction = { path = "./lightyear_prediction", version = "0.26.2", default-features = false }
lightyear_link = { path = "./lightyear_link", version = "0.26.2", default-features = false }
lightyear_raw_connection = { path = "./lightyear_raw_connection", version = "0.26.2", default-features = false }
lightyear_replication = { path = "./lightyear_replication", version = "0.26.2", default-features = false }
lightyear_replicon = { path = "./lightyear_replicon", version = "0.26.2", default-features = false }
lightyear_serde = { path = "./lightyear_serde", version = "0.26.2", default-features = false }
lightyear_steam = { path = "./lightyear_steam", version = "0.26.2", default-features = false }
lightyear_sync = { path = "./lightyear_sync", version = "0.26.2", default-features = false }
lightyear_udp = { path = "./lightyear_udp", version = "0.26.2", default-features = false }
lightyear_ui = { path = "./lightyear_ui", version = "0.26.2", default-features = false }
lightyear_utils = { path = "./lightyear_utils", version = "0.26.2", default-features = false }
lightyear_tests = { path = "./lightyear_tests", version = "0.26.2", default-features = false }
lightyear_web = { path = "./lightyear_web", version = "0.26.2", default-features = false }
lightyear_webtransport = { path = "./lightyear_webtransport", version = "0.26.2", default-features = false }
lightyear_websocket = { path = "./lightyear_websocket", version = "0.26.2", default-features = false }


# examples
lightyear_examples_common = { path = "./examples/common", version = "0.26.2", default-features = false }

# utils
anyhow = { version = "1.0.75", features = [] }
clap = { version = "4.5.4", features = ["derive"] }
chrono = "0.4.38"
cfg-if = "1.0"
dashmap = "6.1.0"
enum_dispatch = "0.3"
fixed = { version = "1.29", features = ["serde"] }
governor = "0.10"
hashbrown = { version = "0.16", default-features = false }
indexmap = { version = "2.9.0", default-features = false }
nonzero_ext = "0.3.0"
parking_lot = "0.12.3"
paste = { version = "1.0", default-features = false }
rand = "0.9"
ringbuffer = "0.16"
thiserror = "2.0.3"
seahash = "4.1.0"
smallvec = { version = "1", features = ["union", "const_generics"] }
variadics_please = "1.1.0"

# no_std
no_std_io2 = { version = "0.9", features = ["alloc"] }

# serialization
bincode = { version = "2.0.1", default-features = false, features = [
  "serde",
  "alloc",
] }
bytes = { version = "1.8", default-features = false, features = ["serde"] }
serde = { version = "1", default-features = false, features = [
  "alloc",
  "derive",
] }

# netcode
chacha20poly1305 = { version = "0.10" }

# tracing
test-log = { version = "0.2.17", default-features = false, features = [
  "trace",
  "color",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = [
  "registry",
  "env-filter",
] }

# doc
document-features = "0.2.11"

# server
crossbeam-channel = { version = "0.5.15", features = [] }

# metrics
metrics = "0.24"
metrics-util = "0.20"

# transport
aeronet_webtransport = { version = "0.19" }
aeronet_websocket = { version = "0.19" }
aeronet_steam = { version = "0.19" }
aeronet_io = { version = "0.19" }
# we don't need any tokio features, we use only use the tokio channels
tokio = { version = "1.45", features = [
  "sync",
  "macros",
], default-features = false }
async-compat = "0.2"

# dev deps
mock_instant = "0.6"
approx = "0.5.1"

# Bevy
# (the full app is used for examples)
bevy = { version = "0.18", default-features = false, features = [
  "bevy_state",
  "bevy_log",
  "serialize",
  "bevy_asset",
  "bevy_color",
  "multi_threaded",
  "sysinfo_plugin",
  "zstd_rust",
] }
bevy_app = { version = "0.18", default-features = false }
bevy_derive = { version = "0.18", default-features = false }
bevy_diagnostic = { version = "0.18", default-features = false }
bevy_color = { version = "0.18", default-features = false }
bevy_ecs = { version = "0.18", default-features = false }
bevy_input = { version = "0.18", default-features = false }
bevy_math = { version = "0.18", default-features = false }
bevy_platform = { version = "0.18", default-features = false }
bevy_ptr = { version = "0.18", default-features = false }
bevy_reflect = { version = "0.18", default-features = false }
bevy_text = { version = "0.18", default-features = false }
bevy_time = { version = "0.18", default-features = false }
bevy_transform = { version = "0.18", default-features = false }
bevy_ui = { version = "0.18", default-features = false }
bevy_utils = { version = "0.18", default-features = false, features = [
  "debug",
] }
bevy_winit = { version = "0.18", default-features = false }
tracy-client = { version = "0.18" }

# replication
bevy_replicon = { version = "0.38" }

# input
bevy_enhanced_input = { version = "0.22", features = ["serialize"] }
leafwing-input-manager = { version = "0.20", default-features = false }

# physics
avian2d = { version = "0.5", default-features = false }
avian3d = { version = "0.5", default-features = false }

# gui debug ui
bevy-inspector-egui = { version = "0.36", default-features = false, features = [
  "bevy_pbr",
  "bevy_image",
  "bevy_render",
  "egui_open_url",
] }
bevy_egui = { version = "0.39", default-features = false, features = [
  "open_url",
  "default_fonts",
  "render",
] }
egui_extras = "0.33"

# WASM things
console_error_panic_hook = "0.1.7"
web-time = "1.1.0"
getrandom = { version = "0.3", features = [
  "wasm_js", # feature 'js' is required for wasm, see https://github.com/rust-random/getrandom?tab=readme-ov-file#webassembly-support
] }
getrandom_02 = { version = "0.2", features = ["js"], package = "getrandom" }

[workspace.lints.rust]
dead_code = "allow"
unused_variables = "allow"

[workspace.lints.clippy]
type_complexity = "allow"
missing_transmute_annotations = "allow"
len_without_is_empty = "allow"
too_many_arguments = "allow"
module_inception = "allow"
alloc_instead_of_core = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
