[package]
name = "lightyear-benches"
version = "0.0.0"
publish = false
authors = ["Charles Bournhonesque <charlesbour@gmail.com>"]
edition = "2021"
rust-version = "1.65"
description = "Benchmark tests for lightyear"
readme = "../README.md"
repository = "https://github.com/cBournhonesque/lightyear"
keywords = ["bevy", "multiplayer", "networking", "netcode", "gamedev"]
categories = ["game-development", "network-programming"]
license = "MIT OR Apache-2.0"

[dependencies]
pprof = { version = "0.14.0", features = ["flamegraph", "frame-pointer"] }
lightyear = { path = "../lightyear" }
criterion = { version = "0.5", features = ["html_reports"] }
crossbeam-channel = "0.5.10"
bevy = { version = "0.14", default-features = true, features = [
  "bevy_core_pipeline",
  "multi_threaded",
  "bevy_state",
] }
divan = "0.1.14"
serde = { version = "1.0.188", features = ["derive"] }

bitcode = "0.6.0-beta.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
lz4_flex = { version = "0.11.2", default-features = false }

[[bin]]
name = "replication_profiling"
path = "replication_profiling.rs"


[[bench]]
name = "replication"
path = "replication.rs"
harness = false

[[bench]]
name = "message"
path = "message.rs"
harness = false

[[bench]]
name = "bitcode_packing"
path = "bitcode_packing.rs"
harness = false
