[package]
name = "lightyear_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
lightyear_shared = { path = "../shared" }
tracing = "0.1.39"
bevy_app = { version = "0.11", default-features = false}
bevy_ecs = { version = "0.11", default-features = false}
bevy_time = { version = "0.11", default-features = false}

[dev-dependencies]
mock_instant = "0.3"
