[package]
name = "lightyear_examples"
version = "0.1.0"
authors = ["Charles Bournhonesque <charlesbour@gmail.com>"]
edition = "2021"
rust-version = "1.65"
description = "Examples for the lightyearServer-client networking library for the Bevy game engine"
readme = "README.md"
repository = "https://github.com/cBournhonesque/lightyear"
keywords = ["bevy", "multiplayer", "networking", "netcode", "gamedev"]
categories = ["game-development", "network-programming"]
license = "MIT OR Apache-2.0"
exclude = ["/tests"]
publish = false


[[example]]
name = "simple_box"
path = "simple_box/main.rs"

[[example]]
name = "connection_soak"
path = "connection_soak.rs"

[[example]]
name = "bevy_headless"
path = "bevy_headless.rs"

[[example]]
name = "bevy_simple"
path = "bevy_simple.rs"

[[example]]
name = "bevy_step"
path = "bevy_step.rs"

[[example]]
name = "input_buffer_step"
path = "input_buffer_step.rs"

[[example]]
name = "prediction_step"
path = "prediction_step.rs"


[features]
metrics = ["lightyear/metrics", "dep:metrics-exporter-prometheus"]
mock_time = ["lightyear/mock_time"]

[dependencies]
lightyear = { path = "../lightyear", features = ["webtransport"] }
serde = { version = "1.0.188", features = ["derive"] }
anyhow = { version = "1.0.75", features = [] }
tracing = "0.1"
tracing-subscriber = "0.3.17"
bevy = { version = "0.12", features = ["bevy_core_pipeline"] }
derive_more = { version = "0.99", features = ["add", "mul"] }
rand = "0.8.1"
clap = { version = "4.4", features = ["derive"] }
mock_instant = "0.3"
metrics-exporter-prometheus = { version = "0.12.1", optional = true }
bevy-inspector-egui = "0.21.0"
tokio = { version = "1.34.0", features = ["rt", "macros"] }
