[package]
name = "lightyear-io"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "IO primitives for the lightyear networking library"
repository = "https://github.com/cBournhonesque/lightyear"

[features]
default = ["std"]
std = []

[dependencies]
# utils
anyhow.workspace = true
bytes.workspace = true
cfg-if.workspace = true
hashbrown.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

# no_std
no_std_io2 = { workspace = true, optional = true }

[lints]
workspace = true
